update Jos Leys

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -2,7 +2,7 @@ Version history
 
 v2.17 (February 2019)
 - Added new fractal formulas
-   josKleinianV2 BETA
+   josKleinianV2
    mandelbulbAtan2Power2
    bristorbrot2
    mandeltorus
