--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -1,5 +1,14 @@
 Version history
 
+v2.18 (????????????? 2019)
+- Added new fractal formulas
+   amazingSurfMod3
+   menger middle mod, added vary scale
+
+
+
+
+
 v2.17 (March 2019)
 - Added new fractal formulas
    josKleinianV2
