--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -5,7 +5,7 @@ v2.18 (????????????? 2019)
    amazingSurfMod3
    transfRotationIterControls
 
-
+- modified fractal formulas
    menger middle mod, added vary scale and sphere inversion
    trans_scale4d,  added vary scale
 
