img icons transf_clamp4d and transf_rotation_iter_controls inv spherical asurf example

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -4,6 +4,7 @@ v2.18 (????????????? 2019)
 - Added new fractal formulas
    amazingSurfMod3
    transfRotationIterControls
+   transfClamp4d
 
 - modified fractal formulas
    menger middle mod, added vary scale and sphere inversion
