--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -5,11 +5,12 @@ v2.18 (????????????? 2019)
    amazingSurfMod3
    transfRotationIterControls
    transfClamp4d
+   transfAbsAddMulti4d
 
 - modified fractal formulas
    menger middle mod, added vary scale and sphere inversion
    trans_scale4d,  added vary scale
-
+   aboxModKaliV2,  added oldZ sign transform
 
 
 
