--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -11,6 +11,7 @@ v2.18 (????????????? 2019)
    menger middle mod, added vary scale and sphere inversion
    trans_scale4d,  added vary scale
    aboxModKaliV2,  added oldZ sign transform
+   transfAbsAddTgladFold4d added iter controls and aux.color
 
 
 
