abox modKali added pre-rotation

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -14,6 +14,7 @@ v2.18 (????????????? 2019)
    transfAbsAddTgladFold4d, added iter controls and aux.color
    transfBoxFold4dTglad, added linear vary scale option
    mandelboxVariable, added variable box limits
+   aboxModKali, added pre-rotation (variable)
 
 v2.17 (March 2019)
 - Added new fractal formulas
