--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -6,6 +6,7 @@ v2.18 (????????????? 2019)
    transfRotationIterControls
    transfClamp4d
    transfAbsAddMulti4d
+   transfRotateAboutVec3
 
 - modified fractal formulas
    menger middle mod, added vary scale and sphere inversion
