--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -7,6 +7,7 @@ v2.18 (????????????? 2019)
    transfClamp4d
    transfAbsAddMulti4d
    transfRotateAboutVec3
+   transfOffsetSCurve4d
 
 - modified fractal formulas
    menger middle mod, added vary scale and sphere inversion
