--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -8,6 +8,7 @@ v2.18 (????????????? 2019)
    transfAbsAddMulti4d
    transfRotateAboutVec3
    transfOffsetSCurve4d
+   transfGnarl
 
 - modified fractal formulas
    menger middle mod, added vary scale and sphere inversion
