--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -9,6 +9,7 @@ v2.18 (????????????? 2019)
    transfRotateAboutVec3
    transfOffsetSCurve4d
    transfGnarl
+   transfBoxTiling4d
 
 - modified fractal formulas
    menger middle mod, added vary scale and sphere inversion
