transf_add_constant_mod2

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -5,6 +5,7 @@ v2.20
    riemannSphereHoboldPow4
    riemannSphereHoboldPow8
    mandelbulbKosalos
+   transfAddConstantMod2
 
 - modified fractal formulas
    boxFoldBulbPow2V3, added sphere invert
