--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -8,11 +8,13 @@ v2.20
    mandelbulbKosalos
    mandelbulbKosalosV2
    transfAddConstantMod2
+   transfAddConstantRotV1
 
 - modified fractal formulas
    boxFoldBulbPow2V3, added sphere invert
    transfRotationIterControls, fix order of rotations
    msltoeSym4Mod, added mul and fixed scale
+   aboxMod13,add missing sphere fold iter controls
 
 v2.19-1
 - fixed bug #702 -  there was OpenCL compiler error when used diffusion texture and transparency without reflectance
