Fix paths in *.fract files to SHARED_PATH
This currently only works for unix
- Uses gettext's envsubst (added to deploy/README requirements)
- Patches using deploy/patch-templates.sh, for *.template files
- Moved *.fract files requiring patching to *.fract.template

The following files have paths in them that I didn't know how to patch:
- Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mandelbulb_eye 001.fract
- Robert Pancoast collection - license Creative Commons (CC-BY 4.0)/box-deuce-deuce.fract
- Robert Pancoast collection - license Creative Commons (CC-BY 4.0)/menger-fatbackstrokin.fract
- mandelbox_menger_with_textures.fract
- monte carlo global illumination.fract

(From a grep -rl '[A-Z]:\\\|/home\|/usr' deploy/share/mandelbulber2/,
there might be more.)

--- a/mandelbulber2/deploy/README
+++ b/mandelbulber2/deploy/README
@@ -45,7 +45,7 @@ packages needed to RUN
 packages needed to COMPILE
     build-essential qt5-default libpng-dev qttools5-dev qttools5-dev-tools
     libgsl-dev libgomp1 qtmultimedia5-dev libqt5multimedia5-plugins
-    libsndfile1-dev liblzo2-dev
+    libsndfile1-dev liblzo2-dev gettext
 
 Installing packages on Ubuntu, Debian stable (jessie) or Mint: 
 sudo apt-get install build-essential libqt5gui5 qt5-default libpng16-16 \
