transf_scale_offset.ui

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -10,6 +10,8 @@ v2.20
    mandelbulbLambda
    transfAddConstantMod2
    transfAddConstantRotV1
+   transfScaleOffset
+   transfScaleOffsetV2
    dIFSBoxDiagonalV1
    dIFSBoxV1
    dIFSCylinder
