riemann_sphere_msltoe_v2.ui improved and converted to analytic DE

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -49,6 +49,7 @@ v2.20
    quickDudley, convert to analytic
    quickDudleyMod, convert to analytic
    makin3d2, convert to analytic
+   riemannSphereMsltoeV2, convert to analytic
    transfBenesiCubeSphere, convert to analytic
    transfBenesiSphereCube, convert to analytic
    transfBenesiT3, covert to analytic
