sierpinski3d fixed DE

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -61,7 +61,8 @@ v2.20
    transfBenesiT3, covert to analytic
    transfBenesiT4, covert to analytic
    transfBenesiT5b, covert to analytic
-   aexionOctopusMod,  add Force Analytic option
+   aexionOctopusMod, add Force Analytic option
+   sierpinski3d, fixed DE
 
 
 
