--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -1,5 +1,29 @@
 Version history
 
+v2.21 (??? 2020)
+- Added new fractal formulas
+
+   aboxSphere4d
+   aboxTetra4d
+   transfDIFSTorusGrid
+
+
+
+
+- modified fractal formulas
+   pseudoKleinianStdDE change to std r bailout & aux.dist DE
+   scatorPower2 change to std r bailout & aux.dist DE
+   scatorPower2Imaginary change to std r bailout
+   scatorPower2Real change to std r bailout
+
+
+
+
+
+
+
+
+
 v2.20 (December 2019)
 - Added new fractal formulas
    amazingSurfMod4
