transf_spherical_fold_v1.png

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -20,6 +20,7 @@ v2.21 (??? 2020)
    transfMandalayFoldV1
    transfMandalayFoldV2
    transfSinAdd
+   transfSphericalFoldV1
    transfDIFSTorusGrid
    transfDEControls BETA
 
